################################################################################
#  UNIT TESTS GENERATION 
################################################################################
ADD_SUBDIRECTORY(unit)

################################################################################
#  BENCHMARK TESTS GENERATION 
################################################################################
ADD_SUBDIRECTORY(benchmark)
