################################################################################
message ("--  ---------- GATB TESTS ----------")
################################################################################

################################################################################
#  UNIT TESTS GENERATION 
################################################################################
ADD_SUBDIRECTORY (unit)

################################################################################
#  BENCHMARK TESTS GENERATION 
################################################################################
ADD_SUBDIRECTORY (benchmark EXCLUDE_FROM_ALL)
